litmask/tests/compile/mask_file_with_args.stderr
error: mask_file! takes no arguments
 --> tests/compile/mask_file_with_args.rs:6:32
  |
6 |     let _: String = mask_file!(42);
  |                                ^^
